test/typecheck/errors/aggregator-in-emit.boa
o: output sum of int;
sum << 1;
